--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
+
+.form {
+  @apply bg-white drop-shadow-xl rounded p-16 space-y-8;
+}
+
+.button {
+  @apply bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-2 px-4 rounded;
+}
+
+.field {
+  @apply flex items-center space-x-4;
+}
+
+.label {
+  @apply block text-xs font-medium text-gray-500 uppercase tracking-wider w-40 text-right;
+}
+
+.label strong {
+  @apply text-red-700;
+}
+
+.input {
+  @apply form-input rounded border-gray-200 w-full flex-1;
+}
+
+.button-icon {
+  @apply p-2 rounded hover:bg-indigo-100 text-gray-400 hover:text-indigo-600;
+}
+
 @tailwind utilities;
